[metadata]
name = hard-code-it
version = 0.1.0
author = Peter Stein, Christian Roth
author_email = peter.stein@protonmai.com, christian.r.dev@googlemail.com
description = TBA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ptrstn/hard-code-it
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyGObject
    PyGObject-stubs

[options.extras_require]
test =
    black
    flake8
    pytest

[flake8]
count = True
exclude =
    .git,
    .venv,
    __pycache__,
    build,
    dist,
    venv
max-line-length = 88
show-source = True
statistics = True
